docker/kubernetes/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        environment: production
        app: api
    spec:
      containers:
        - name: api
          image: winteryfox/artify-api
          ports:
            - containerPort: 8080
